tests/ui/transmute/redundant-transmutation.stderr
error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:8:14
   |
LL |     unsafe { transmute(x) }
   |              ^^^^^^^^^^^^ help: replace `transmute`: `u32::to_ne_bytes(x)`
   |
   = help: there's also `to_le_bytes` and `to_ne_bytes` if you expect a particular byte order
note: the lint level is defined here
  --> $DIR/redundant-transmutation.rs:2:9
   |
LL | #![deny(redundant_transmutation)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:14:22
   |
LL |         let x: u16 = transmute(*b"01");
   |                      ^^^^^^^^^^^^^^^^^ help: replace `transmute`: `u16::from_ne_bytes(*b"01")`
   |
   = help: there's also `from_le_bytes` and `from_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:16:26
   |
LL |         let x: [u8; 2] = transmute(x);
   |                          ^^^^^^^^^^^^ help: replace `transmute`: `u16::to_ne_bytes(x)`
   |
   = help: there's also `to_le_bytes` and `to_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:18:22
   |
LL |         let x: u32 = transmute(*b"0123");
   |                      ^^^^^^^^^^^^^^^^^^^ help: replace `transmute`: `u32::from_ne_bytes(*b"0123")`
   |
   = help: there's also `from_le_bytes` and `from_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:20:26
   |
LL |         let x: [u8; 4] = transmute(x);
   |                          ^^^^^^^^^^^^ help: replace `transmute`: `u32::to_ne_bytes(x)`
   |
   = help: there's also `to_le_bytes` and `to_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:22:22
   |
LL |         let x: u64 = transmute(*b"feriscat");
   |                      ^^^^^^^^^^^^^^^^^^^^^^^ help: replace `transmute`: `u64::from_ne_bytes(*b"feriscat")`
   |
   = help: there's also `from_le_bytes` and `from_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:24:26
   |
LL |         let x: [u8; 8] = transmute(x);
   |                          ^^^^^^^^^^^^ help: replace `transmute`: `u64::to_ne_bytes(x)`
   |
   = help: there's also `to_le_bytes` and `to_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:27:22
   |
LL |         let y: i16 = transmute(*b"01");
   |                      ^^^^^^^^^^^^^^^^^ help: replace `transmute`: `i16::from_ne_bytes(*b"01")`
   |
   = help: there's also `from_le_bytes` and `from_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:29:26
   |
LL |         let y: [u8; 2] = transmute(y);
   |                          ^^^^^^^^^^^^ help: replace `transmute`: `i16::to_ne_bytes(y)`
   |
   = help: there's also `to_le_bytes` and `to_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:31:22
   |
LL |         let y: i32 = transmute(*b"0123");
   |                      ^^^^^^^^^^^^^^^^^^^ help: replace `transmute`: `i32::from_ne_bytes(*b"0123")`
   |
   = help: there's also `from_le_bytes` and `from_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:33:26
   |
LL |         let y: [u8; 4] = transmute(y);
   |                          ^^^^^^^^^^^^ help: replace `transmute`: `i32::to_ne_bytes(y)`
   |
   = help: there's also `to_le_bytes` and `to_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:35:22
   |
LL |         let y: i64 = transmute(*b"feriscat");
   |                      ^^^^^^^^^^^^^^^^^^^^^^^ help: replace `transmute`: `i64::from_ne_bytes(*b"feriscat")`
   |
   = help: there's also `from_le_bytes` and `from_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:37:26
   |
LL |         let y: [u8; 8] = transmute(y);
   |                          ^^^^^^^^^^^^ help: replace `transmute`: `i64::to_ne_bytes(y)`
   |
   = help: there's also `to_le_bytes` and `to_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:40:22
   |
LL |         let z: f32 = transmute(*b"0123");
   |                      ^^^^^^^^^^^^^^^^^^^ help: replace `transmute`: `f32::from_ne_bytes(*b"0123")`
   |
   = help: there's also `from_le_bytes` and `from_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:42:26
   |
LL |         let z: [u8; 4] = transmute(z);
   |                          ^^^^^^^^^^^^ help: replace `transmute`: `f32::to_ne_bytes(z)`
   |
   = help: there's also `to_le_bytes` and `to_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:44:22
   |
LL |         let z: f64 = transmute(*b"feriscat");
   |                      ^^^^^^^^^^^^^^^^^^^^^^^ help: replace `transmute`: `f64::from_ne_bytes(*b"feriscat")`
   |
   = help: there's also `from_le_bytes` and `from_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:46:26
   |
LL |         let z: [u8; 8] = transmute(z);
   |                          ^^^^^^^^^^^^ help: replace `transmute`: `f64::to_ne_bytes(z)`
   |
   = help: there's also `to_le_bytes` and `to_ne_bytes` if you expect a particular byte order

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:49:22
   |
LL |         let y: u32 = transmute('đź¦€');
   |                      ^^^^^^^^^^^^^^^ help: replace `transmute`: `('đź¦€') as u32`

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:51:23
   |
LL |         let y: char = transmute(y);
   |                       ^^^^^^^^^^^^ help: replace `transmute`: `char::from_u32_unchecked(y)`
   |
   = help: consider `char::from_u32(â€¦).unwrap()`

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:54:22
   |
LL |         let x: u16 = transmute(8i16);
   |                      ^^^^^^^^^^^^^^^ help: replace `transmute`: `i16::cast_unsigned(8i16)`

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:56:22
   |
LL |         let x: i16 = transmute(x);
   |                      ^^^^^^^^^^^^ help: replace `transmute`: `u16::cast_signed(x)`

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:58:22
   |
LL |         let x: u32 = transmute(4i32);
   |                      ^^^^^^^^^^^^^^^ help: replace `transmute`: `i32::cast_unsigned(4i32)`

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:60:22
   |
LL |         let x: i32 = transmute(x);
   |                      ^^^^^^^^^^^^ help: replace `transmute`: `u32::cast_signed(x)`

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:62:22
   |
LL |         let x: u64 = transmute(7i64);
   |                      ^^^^^^^^^^^^^^^ help: replace `transmute`: `i64::cast_unsigned(7i64)`

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:64:22
   |
LL |         let x: i64 = transmute(x);
   |                      ^^^^^^^^^^^^ help: replace `transmute`: `u64::cast_signed(x)`

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:67:22
   |
LL |         let y: f32 = transmute(1u32);
   |                      ^^^^^^^^^^^^^^^ help: replace `transmute`: `f32::from_bits(1u32)`

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:69:22
   |
LL |         let y: u32 = transmute(y);
   |                      ^^^^^^^^^^^^ help: replace `transmute`: `f32::to_bits(y)`

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:71:22
   |
LL |         let y: f64 = transmute(3u64);
   |                      ^^^^^^^^^^^^^^^ help: replace `transmute`: `f64::from_bits(3u64)`

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:73:22
   |
LL |         let y: u64 = transmute(2.0);
   |                      ^^^^^^^^^^^^^^ help: replace `transmute`: `f64::to_bits(2.0)`

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:76:23
   |
LL |         let z: bool = transmute(1u8);
   |                       ^^^^^^^^^^^^^^ help: replace `transmute`: `(1u8 == 1)`

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:78:21
   |
LL |         let z: u8 = transmute(z);
   |                     ^^^^^^^^^^^^ help: replace `transmute`: `(z) as u8`

error: this transmute could be performed safely
  --> $DIR/redundant-transmutation.rs:83:21
   |
LL |         let z: i8 = transmute(z);
   |                     ^^^^^^^^^^^^ help: replace `transmute`: `(z) as i8`

error: aborting due to 32 previous errors

